(menhir (modules parser))

(ocamllex lexer)
(include_subdirs unqualified)

(library
  (name lib)
  (public_name lib)
  (preprocess (pps ppx_bin_prot ppx_hash ppx_deriving.std ppx_let ppx_optcomp ppx_compare ppx_sexp_conv ppx_variants_conv))
  (synopsis "Basic language definition")
  (libraries z3overlay myStdLib str posix-math lacaml))
